bin/testsuite/tests/compiler/src/errors/compiler5268.swg
//#global testerror "Err0250"
func toto(x: u64) {}

#test
{
    var v: u32
    toto(v)
}
